tests/lean/argNameIfMacroScopes.lean.expected.out
argNameIfMacroScopes.lean:5:4-5:5: error: Placeholder could not be inferred.

context:
x : Nat
⊢ Nat
